# vultr-dns-updater

./: .gitignore  .pre-commit-config.yaml  COMMANDS.md  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pyproject.toml
vultr_dns_updater/: __init__.py  config.py  ip_service.py  models.py  vultr_client.py
vultr_dns_updater/cli/: __init__.py  runner.py  utils.py
vultr_dns_updater/cli/commands/: config.py  get_ip.py  list_domains.py  list_records.py  service.py  status.py  update.py
